--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(H2)
 export(SFC_RULES_HILBERT)
 export(SFC_RULES_MEANDER)
 export(SFC_RULES_PEANO)
+export(beta_omega_curve)
 export(draw_multiple_curves)
 export(draw_rules_hilbert)
 export(draw_rules_meander)
@@ -35,6 +36,11 @@ export(draw_rules_peano)
 export(expand_h)
 export(h_curve)
 export(hilbert_3d)
+export(hilbert_curve)
+export(meander_curve)
+export(moore_curve)
+export(peano_curve)
+export(plot_segments)
 export(sfc_base)
 export(sfc_hilbert)
 export(sfc_meander)
@@ -67,4 +73,5 @@ import(colorRamp2)
 import(graphics)
 import(grid)
 import(methods)
+importFrom(stats,runif)
 useDynLib(sfcurve, .registration = TRUE)
