--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -21,3 +21,4 @@ vignettes/space_filling_curve.Rmd
 vignettes/hilbert_curve.Rmd
 vignettes/meander_curve.Rmd
 vignettes/peano_curve.Rmd
+vignettes/h_curve.Rmd
