--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,15 +25,19 @@ export(BASE_U)
 export(H0)
 export(H1)
 export(H2)
+export(SFC_RULES_3x3_COMBINED)
 export(SFC_RULES_HILBERT)
 export(SFC_RULES_MEANDER)
 export(SFC_RULES_PEANO)
+export(all_transverse_paths)
 export(beta_omega_curve)
 export(draw_multiple_curves)
+export(draw_rules_3x3_combined)
 export(draw_rules_hilbert)
 export(draw_rules_meander)
 export(draw_rules_peano)
 export(expand_h)
+export(get_one_transverse_path)
 export(h_curve)
 export(hilbert_3d)
 export(hilbert_curve)
@@ -41,6 +45,8 @@ export(meander_curve)
 export(moore_curve)
 export(peano_curve)
 export(plot_segments)
+export(plot_transverse_paths)
+export(sfc_3x3_combined)
 export(sfc_base)
 export(sfc_hilbert)
 export(sfc_meander)
@@ -50,6 +56,8 @@ export(sfc_seed)
 export(sfc_sequence)
 export(sfc_unit)
 export(unit_orientation)
+exportMethods(change_level1_unit_orientation)
+exportMethods(level1_unit_orientation)
 exportMethods(sfc_apply)
 exportMethods(sfc_dflip)
 exportMethods(sfc_expand)
