--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(sfc_rules)
 export(sfc_seed)
 export(sfc_sequence)
 export(sfc_unit)
+export(test_sfc_index)
 export(unit_orientation)
 exportMethods(change_level1_unit_orientation)
 exportMethods(level1_unit_orientation)
