add new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ S3method("[",sfc_rules)
 S3method("[",sfc_sequence)
 S3method("[<-",sfc_sequence)
 S3method("^",sfc_sequence)
+S3method("|",sfc_nxn)
 S3method(c,sfc_sequence)
 S3method(length,sfc_sequence)
 S3method(makeContext,grob_sfc_sequence)
+S3method(plot,grob_sfc_sequence)
 S3method(plot,sfc_base)
 S3method(plot,sfc_nxn)
 S3method(plot,sfc_sequence)
@@ -49,6 +51,7 @@ export(get_one_traverse_path)
 export(h_curve)
 export(hilbert_3d)
 export(hilbert_curve)
+export(mark_local_units)
 export(meander_curve)
 export(moore_curve)
 export(peano_curve)
